# OpenShell

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  dev-sandbox-policy-empty.yaml  dev-sandbox-policy.yaml
.agents/skills/debug-navigator-cluster/: SKILL.md
.agents/skills/generate-sandbox-policy/: SKILL.md  examples.md
.agents/skills/nemoclaw-cli/: SKILL.md  cli-reference.md
.agents/skills/openshell-cli/: SKILL.md  cli-reference.md
.github/workflows/: kagenti-ci.yml  kagenti-release-cli.yml  publish.yml
architecture/: build-containers.md  containers.md  gator.md  oidc-auth.md  oidc-local-testing.md  security-policy.md
crates/navigator-cli/: Cargo.toml
crates/navigator-policy/: Cargo.toml
crates/navigator-policy/src/: lib.rs
crates/navigator-tui/: Cargo.toml
crates/navigator-tui/src/: app.rs  event.rs  lib.rs  theme.rs
crates/navigator-tui/src/ui/: create_provider.rs  create_sandbox.rs  dashboard.rs  mod.rs  providers.rs  sandbox_detail.rs  sandbox_logs.rs  sandbox_policy.rs  sandboxes.rs
crates/openshell-cli/: Cargo.toml
crates/openshell-core/: build.rs
crates/openshell-server/: Cargo.toml
deploy/docker/: Dockerfile.cluster  Dockerfile.python-wheels-macos  cluster-entrypoint.sh
docs/: index.md
docs/about/: architecture.md  get-started.md  overview.md
docs/inference/: configure.md
docs/reference/: cli.md
docs/sandboxes/: create-and-manage.md  index.md
docs/tutorials/: github-sandbox.md
proto/: credentials_driver.proto
scripts/: keycloak-realm.json
tasks/scripts/: cluster-bootstrap.sh  cluster-deploy-fast.sh
(+57 files in other folders)
