[package]
name = "navigator-policy"
description = "Shared sandbox policy parsing and defaults for Navigator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
navigator-core = { path = "../navigator-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true
